# sht

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  sht_gsl.cpp  sht_multiprecision.cpp
include/sht/: legendre.h
test/: CMakeLists.txt  test_legendre.cpp
